# xlab

./: .gitignore  CHANGELOG.md  FFMPEG_BUILD_GUIDE.md  FFMPEG_PREBUILT_STATIC.md  components.json  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.github/: FFMPEG_BUILD_GUIDE.md
.github/workflows/: build-and-release.yml  build.yml  release.yml
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: EditorMode.jsx  MainPage.jsx  NavigationTabs.css  NavigationTabs.jsx  PastRecordings.css  PastRecordings.jsx  PastRecordings.jsx.bak  PastVideosList.jsx  PointerPreview.css  PointerPreview.jsx  ProgressBar.jsx  RecorderMode.css  RecorderMode.jsx  RecordingControls.jsx  RecordingOptions.jsx  RecordingsList.jsx  SettingsMode.jsx  SolidPointers.jsx
src/components/ui/: select.jsx
src/context/: RecorderContext.jsx
src/utils/: api.js  formatters.jsx  mockTauri.js  tauriWrapper.js
xlab-core/: Cargo.toml  build.rs
xlab-core/ffmpeg_static/include/SDL2/: SDL_config.h  SDL_revision.h
xlab-core/ffmpeg_static/include/openssl/: opensslconf.h
xlab-core/ffmpeg_static/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la  libass.la  libfdk-aac.la  libfribidi.la  libharfbuzz-icu.la  libharfbuzz.la  libmp3lame.la  libogg.la  libopus.la  libspeex.la  libvorbis.la  libvorbisenc.la  libvorbisfile.la  libwebp.la  libz.so.1.2.11  libzimg.la
xlab-core/ffmpeg_static/lib/cmake/SDL2/: sdl2-config.cmake
xlab-core/ffmpeg_static/lib/pkgconfig/: fdk-aac.pc  fribidi.pc  harfbuzz-icu.pc  harfbuzz.pc  libass.pc  libcrypto.pc  libopenjp2.pc  librtmp.pc  libssl.pc  libwebp.pc  ogg.pc  openssl.pc  opus.pc  sdl2.pc  soxr-lsr.pc  soxr.pc  speex.pc  vidstab.pc  vorbis.pc  vorbisenc.pc  vorbisfile.pc  vpx.pc  x264.pc  x265.pc  zimg.pc  zlib.pc
xlab-core/src/: lib.rs  options.rs  record.rs  user.rs
xlab-core/src/video/: ffmpeg_bindings.rs  mod.rs
