[package]
name = "xlab"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-save"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
xlab-core = { path = "../xlab-core" }

[profile.dev.package."xlab-core"]
opt-level = 3