[package]
name = "xlab"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tauri-plugin-dialog = "2"
xlab-core = { path = "../xlab-core" }

[profile.dev.package."xlab-core"]
opt-level = 3
