[package]
name = "xlab"
version = "0.1.0"
description = "High performance screen recorder"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-dialog = "2"
xlab-core = { path = "../xlab-core" }

[profile.dev.package."xlab-core"]
opt-level = 3
debug = false

[profile.test.package."xlab-core"]
opt-level = 3
debug = false
