[package]
name = "xlab-core"
version = "0.1.0"
edition = "2021"

[dependencies]
xcap = "0.6.2"
mouse_position = "0.1.4"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
fast_image_resize = { version = "5.2.0", features = ["rayon"] }

[target.'cfg(not(windows))'.dependencies]
# Linux/Unix: Use 'build' feature to compile FFmpeg from source
ffmpeg-sys-next = { version = "7.1.3", features = ["build"] }

[target.'cfg(windows)'.dependencies]
# Windows: Use 'static' feature with vcpkg-provided static libraries
ffmpeg-sys-next = { version = "7.1.3", features = ["static"] }

[profile.dev]
opt-level = 3