[package]
name = "xlab-core"
version = "0.1.0"
edition = "2021"

[dependencies]
xcap = "0.6.2"
mouse_position = "0.1.4"
rand = "0.9.1"
# Use 'static' feature for static linking on all platforms
# - Linux: Uses pkg-config to find static libraries
# - Windows (MSVC): Automatically uses vcpkg
ffmpeg-sys-next = { version = "7.1.3", features = ["static"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
fast_image_resize = { version = "5.2.0", features = ["rayon"] }

[profile.dev]
opt-level = 3